--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </header>
     <body>
-              <image src="footer.jpg" alt"">
+              <image src="nueva-version.jpg" alt"">
 
     </body>
         </html>
